[package]
name = "radio-fm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
gstreamer = "0.24"
gtk = { package = "gtk4", version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
